data/logs/app_20250609.log
2025-06-09 10:49:19,970 - main - INFO - Initializing Facial Attendance System...
2025-06-09 10:49:23,769 - main - INFO - Starting in CLI mode
2025-06-09 10:49:23,771 - main - ERROR - Failed to capture frame from camera
2025-06-09 10:49:23,920 - main - INFO - Initializing Facial Attendance System...
2025-06-09 10:49:28,151 - main - INFO - Initializing Facial Attendance System...
2025-06-09 11:00:58,069 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:01:00,838 - __main__ - INFO - Starting in GUI mode
2025-06-09 11:05:07,116 - __main__ - INFO - Application closed normally
2025-06-09 11:05:22,525 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:17:27,898 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:17:31,825 - __main__ - INFO - Starting in CLI mode
2025-06-09 11:17:43,699 - __main__ - ERROR - Error in CLI mode: 'tuple' object has no attribute 'left'
Traceback (most recent call last):
  File "main.py", line 125, in run_cli_mode
    left = face_rect.left()
AttributeError: 'tuple' object has no attribute 'left'
2025-06-09 11:17:44,096 - __main__ - INFO - Application closed normally
2025-06-09 11:19:01,078 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:19:04,776 - __main__ - INFO - Starting in CLI mode
2025-06-09 11:19:15,709 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:15,826 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:15,923 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,081 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,192 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,330 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,454 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,576 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,696 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,793 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:16,885 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,008 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,125 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,265 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,396 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,503 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,626 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,765 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:17,894 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,043 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,214 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,319 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,419 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,531 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,638 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,743 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,862 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:18,977 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,116 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,226 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,344 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,477 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,609 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,742 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,830 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:19,940 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:20,051 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:20,150 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:20,277 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:20,379 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:20,507 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:20,831 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,059 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,200 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,308 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,438 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,526 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,629 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,745 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,867 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:21,947 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:22,032 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:22,149 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:22,285 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:22,394 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:22,498 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:19:22,624 - __main__ - WARNING - Unknown face format: <class 'tuple'>
2025-06-09 11:20:09,157 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:20:13,030 - __main__ - INFO - Starting in CLI mode
2025-06-09 11:21:42,096 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:21:46,683 - __main__ - INFO - Starting in CLI mode
2025-06-09 11:39:51,521 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:39:54,656 - __main__ - INFO - Starting in GUI mode
2025-06-09 11:39:54,687 - __main__ - ERROR - An unexpected error occurred: unexpected indent (main_window_enhanced.py, line 416)
Traceback (most recent call last):
  File "main.py", line 267, in main
    run_gui_mode(components, args)
  File "main.py", line 220, in run_gui_mode
    from src.gui.main_window_enhanced import EnhancedMainWindow
  File "C:\Users\idiku\OneDrive\Desktop\face-attendance-system\src\gui\main_window_enhanced.py", line 416
    if os.path.exists(attendance_file):
    ^
IndentationError: unexpected indent
2025-06-09 11:46:38,106 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 11:46:41,139 - __main__ - INFO - Starting in GUI mode
2025-06-09 11:46:41,221 - __main__ - INFO - Loading Enhanced GUI with live camera features
2025-06-09 14:47:38,323 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 14:47:41,551 - __main__ - INFO - Starting in GUI mode
2025-06-09 14:47:41,642 - __main__ - INFO - Loading Enhanced GUI with live camera features
2025-06-09 14:48:40,993 - __main__ - INFO - Application closed normally
2025-06-09 15:09:25,082 - __main__ - INFO - Initializing Facial Attendance System...
2025-06-09 15:09:27,949 - __main__ - INFO - Starting in GUI mode
2025-06-09 15:09:28,015 - __main__ - INFO - Loading Enhanced GUI with live camera features
2025-06-09 15:10:01,930 - __main__ - INFO - Application closed normally
